--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 compile.on.save=true
-file.reference.json-simple-1.1.1.jar=C:\\Users\\Kalana\\OneDrive\\WebpageEditor\\json-simple-1.1.1.jar
-user.properties.file=C:\\Users\\Kalana\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+file.reference.json-simple-1.1.1.jar=C:\\Users\\kalan\\OneDrive\\WebpageEditor\\json-simple-1.1.1.jar
+file.reference.swingx-all-1.6.4.jar=C:\\Users\\kalan\\OneDrive\\WebpageEditor\\weblaf-complete-1.29.jar
+user.properties.file=C:\\Users\\kalan\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
