--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,18 +27,20 @@ dist.dir=dist
 dist.jar=${dist.dir}/WebpageEditor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.DateChooser.jar=DateChooser.jar
 file.reference.jsch-0.1.54.jar=jsch-0.1.54.jar
 file.reference.json-simple-1.1.1.jar=C:\\Users\\Kalana\\Downloads\\json-simple-1.1.1.jar
 file.reference.swingx-all-1.6.4.jar=D:\\NetBeans 8.1\\ide\\modules\\ext\\swingx-all-1.6.4.jar
-file.reference.weblaf-complete-1.29.jar=weblaf-complete-1.29.jar
+file.reference.swingx-all-1.6.4.jar-1=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.jsch-0.1.54.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.weblaf-complete-1.29.jar}:\
-    ${file.reference.swingx-all-1.6.4.jar}
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
