--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ file.reference.jsch-0.1.54.jar=jsch-0.1.54.jar
 file.reference.json-simple-1.1.1.jar=C:\\Users\\Kalana\\Downloads\\json-simple-1.1.1.jar
 file.reference.swingx-all-1.6.4.jar=D:\\NetBeans 8.1\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 file.reference.swingx-all-1.6.4.jar-1=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
+file.reference.weblaf-complete-1.29.jar=weblaf-complete-1.29.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -40,7 +41,8 @@ javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${file.reference.swingx-all-1.6.4.jar}:\
     ${file.reference.DateChooser.jar}:\
-    ${file.reference.swingx-all-1.6.4.jar-1}
+    ${file.reference.swingx-all-1.6.4.jar-1}:\
+    ${file.reference.weblaf-complete-1.29.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
