--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 compile.on.save=true
-file.reference.json-simple-1.1.1.jar=/Users/kalanasahabandu/Desktop/NSL_WebEditor/UW-NSL-Web-page-Management-System/json-simple-1.1.1.jar
-file.reference.swingx-all-1.6.4.jar=/Users/kalanasahabandu/Desktop/NSL_WebEditor/UW-NSL-Web-page-Management-System/swingx-all-1.6.4.jar
-file.reference.swingx-all-1.6.4.jar-1=/Users/kalanasahabandu/Desktop/NSL_WebEditor/UW-NSL-Web-page-Management-System/swingx-all-1.6.4.jar
-user.properties.file=/Users/kalanasahabandu/Library/Application Support/NetBeans/8.2/build.properties
+file.reference.json-simple-1.1.1.jar=C:\\Users\\kalan\\Desktop\\NSL page editor\\UW-NSL-Web-page-Management-System\\json-simple-1.1.1.jar
+file.reference.swingx-all-1.6.4.jar=C:\\Users\\kalan\\Desktop\\NSL page editor\\UW-NSL-Web-page-Management-System\\swingx-all-1.6.4.jar
+file.reference.swingx-all-1.6.4.jar-1=C:\\Users\\kalan\\Desktop\\NSL page editor\\UW-NSL-Web-page-Management-System\\swingx-all-1.6.4.jar
+user.properties.file=C:\\Users\\kalan\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
